2006-11-03 Don Scorgie <DonScorgie@Blueyonder.co.uk>

	* src/TextThought.py:
	Make cut / copy / paste work again

2006-11-02 Don Scorgie <DonScorgie@Blueyonder.co.uk>

	(Everything thing seems to be working okay now
	 *fingers crossed* - Loads all my test maps at least)	 
	* src/DrawingThought.py:
	Convert Drawing to new framework
	
	* src/MMapArea.py:
	* src/ImageThought.py:
	* src/TextThought.py:
	Fix various problems that have appeared:
	Loading maps with > 1 thought selected sucks (fixed)
	When loading textthoughts, only show the selection text if
	we're currently editing
	Convolve the lovely nice logic we had some more in MMapArea :(

	(Lots of updates.  Looks like Images work now as well)
	* src/ImageThought.py:
	Convert fully over to new framework
	Images may occasionally jump around, for an unknown
	reason at the moment.
	
	* src/MMapArea.py:
	* src/MainWindow.py:
	* src/BaseThought.py:
	* src/Links.py:
	* src/MMapArea.py:
	* src/ImageThought.py:
	* src/TextThought.py:
	Lots of misc. changes.  Made MMapArea logic almost
	as convolved as before.  But it should really be easier
	now.
	Draw selected thoughts on top of everything
	Make links reduce and strengthen properly
	When selecting thoughts, select the topmost one in preference
	to any below it


2006-11-01 Don Scorgie <DonScorgie@Blueyonder.co.uk>

	(I was wrong.  Loads old *text only* maps properly now)
	* src/MMapArea.py:
	* src/MainWindow.py:
	Fix a few more minor errors relating to loading in
	different modes.  Handle the "invisible_buffer" properly when loading

	(*Think* TextThoughts now work properly)
	* src/MMapArea.py:
	* src/TextThought.py:
	* src/Links.py:
	* src/MainWindow.py:
	Make Loading and saving of TextThoughts, Links and maps
	work properly.  Fix other various minor problems

	(Unbroken most text stuff.  Loading / Saving still doesn't work)
	* src/MMapArea.py:
	* src/TextThought.py:
	Make default be to move a thought
	ctrl-click-drag creates an unending link